[tool.poetry]
name = "pollen_forecast"
version = "0.1.0"
description = ""
authors = ["Lucas SCELLOS <lucas.scellos@axionable.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
geopandas = "^1.0.1"
xarray = "^2025.1.1"
netcdf4 = "^1.7.2"
cdsapi = "^0.7.5"
folium = "^0.19.4"
matplotlib = "^3.10.0"
mapclassify = "^2.8.1"
plotly = "^5.24.1"
nbformat = "^5.10.4"
geopy = "^2.4.1"
streamlit = "^1.42.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
